--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "https://github.com/benbjurstrom/prezet"
+            "url": "https://github.com/prezet/prezet"
         }
     ],
     "require": {
@@ -27,7 +27,6 @@
         "illuminate/contracts": "^10.0||^11.0||^12.0"
     },
     "require-dev": {
-        "benbjurstrom/prezet": "dev-main",
         "larastan/larastan": "^2.9||^3.0",
         "laravel/pint": "^1.14",
         "nunomaduro/collision": "^8.1.1||^7.10.0",
@@ -37,7 +36,8 @@
         "pestphp/pest-plugin-laravel": "^3.0",
         "phpstan/extension-installer": "^1.3||^2.0",
         "phpstan/phpstan-deprecation-rules": "^1.1||^2.0",
-        "phpstan/phpstan-phpunit": "^1.3||^2.0"
+        "phpstan/phpstan-phpunit": "^1.3||^2.0",
+        "prezet/prezet": "dev-main"
     },
     "autoload": {
         "psr-4": {
