--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ composer.lock
 
 # Frontend Assets
 /node_modules
+pnpm-lock.yaml
 
 # Logs
 npm-debug.log
@@ -30,3 +31,6 @@ phpstan.neon
 testbench.yaml
 /docs
 /coverage
+
+content/.obsidian
+tests/Resources/prezet.sqlite
