--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,6 @@
             "role": "Developer"
         }
     ],
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/prezet/prezet"
-        }
-    ],
     "require": {
         "php": "^8.2",
         "spatie/laravel-package-tools": "^1.16",
@@ -37,7 +31,7 @@
         "phpstan/extension-installer": "^1.3||^2.0",
         "phpstan/phpstan-deprecation-rules": "^1.1||^2.0",
         "phpstan/phpstan-phpunit": "^1.3||^2.0",
-        "prezet/prezet": "dev-main"
+        "prezet/prezet": "^1.0.0@rc"
     },
     "autoload": {
         "psr-4": {
